--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@500;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,16 +7,109 @@
 }
 
 :root {
-  --dark-navy: #1A2A33;
-  --semi-dark-navy: #1F3641;
-  --silver: #A8BFC9;
-  --hover-silver: #DBE8ED;
-  --light-blue: #31C3BD;
-  --hover-light-blue: #65E9E4;
-  --light-yellow: #F2B137;
-  --hover-light-yellow: #FFC860;
+  --dark-navy: #1a2a33;
+  --semi-dark-navy: #1f3641;
+  --silver: #a8bfc9;
+  --hover-silver: #dbe8ed;
+  --light-blue: #31c3bd;
+  --hover-light-blue: #65e9e4;
+  --light-yellow: #f2b137;
+  --hover-light-yellow: #ffc860;
+  --shadow-yellow: #CC8B13;
+  --shadow-blue: #228C87;
+  --shadow-navy: #10212A;
+  --shadow-silver: #6B8997;
 }
 
 body {
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
+  letter-spacing: .15rem;
+  background-color: var(--dark-navy);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  min-width: 300px;
+}
+
+.new-game {
+  color: var(--silver);
+}
+
+.new-game .logo {
+  display: block;
+  margin: 0 auto;
+}
+
+.new-game__pick {
+  background-color: var(--semi-dark-navy);
+  padding: 1.5em;
+  margin: 2em 0;
+  border-radius: 15px;
+  text-align: center;
+  -webkit-box-shadow: 0px 11px 0px 0px var(--shadow-navy); 
+  box-shadow: 0px 11px 0px 0px var(--shadow-navy);
+}
+
+.new-game__pick p {
+  font-size: .875rem;
+  opacity: .6;
+}
+
+.new-game__pick__selector {
+  background-color: var(--dark-navy);
+  margin: 1em 0;
+  border-radius: 15px;
+  display: flex;
+}
+
+.new-game__pick__selector__button {
+  background-color: var(--dark-navy);
+  border: none;
+  flex: 1;
+}
+
+.new-game__pick__selector__button--active {
+  background-color: var(--silver);
+  border: none;
+  flex: 1;
+  border-radius: 15px;
+  margin: .8em;
+  padding: 1em 0;
+}
+
+.new-game__pick__selector__button .icon-o path {
+  fill: var(--silver);
+}
+
+.new-game__pick__selector__button--active .icon-x path {
+  fill: var(--dark-navy);
+}
+
+.new-game .btn {
+  display: block;
+  width: 100%;
+  padding: 1em 0;
+  border: none;
+  border-radius: 15px;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 2em;
+}
+
+.btn--yellow {
+  background-color: var(--light-yellow);
+  -webkit-box-shadow: 0px 10px 0px 0px var(--shadow-yellow); 
+  box-shadow: 0px 10px 0px 0px var(--shadow-yellow);
+}
+
+.btn--blue {
+  background-color: var(--light-blue);
+  -webkit-box-shadow: 0px 10px 0px 0px var(--shadow-blue); 
+  box-shadow: 0px 10px 0px 0px var(--shadow-blue);
 }
