--- a/src/components/game/Board.css
+++ b/src/components/game/Board.css
@@ -7,5 +7,15 @@
 .board {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1em;
+  gap: 1.5em;
+}
+
+.board-btn {
+  background-color: var(--semi-dark-navy);
+  color: #fff;
+  -webkit-box-shadow: 0px 9px 0px 0px var(--shadow-navy); 
+  box-shadow: 0px 9px 0px 0px var(--shadow-navy);
+  border: none;
+  height: 90px;
+  border-radius: 10px;
 }
